--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,7 +79,14 @@
         "memory_resource": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "codecvt": "cpp",
+        "csignal": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "list": "cpp",
+        "stack": "cpp",
+        "strstream": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
